Alignement rubriques de droite, correction3

--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -931,8 +931,8 @@ body {
             .div-droite {
               float: left;
               height: 100px;
-              width: 150px;
-              padding-left: 31px;
+              width: 152px;
+              padding-left: 33px;
 
               .img-droite {
                 border-top-right-radius: @border-radius-small;
